--- a/.insomnia/Request/req_4ce47d0833734f17bdb730e0600210f2.yml
+++ b/.insomnia/Request/req_4ce47d0833734f17bdb730e0600210f2.yml
@@ -1,12 +1,12 @@
-_id: req_wrk_8b77d1ab21754a59bfa499c468942a8cf22f151c
+_id: req_4ce47d0833734f17bdb730e0600210f2
 type: Request
 parentId: fld_22f3fcb750084d49874d4eb93550c54a
-modified: 1686969419107
-created: 1686929000747
+modified: 1686969478736
+created: 1686969474462
 url: "{{ base_url }}/sku/{% response 'body',
   'req_wrk_8b77d1ab21754a59bfa499c468942a8cc001c871',
   'b64::JC5kYXRhWzBdLmlk::46b', 'no-history', 60 %}"
-name: Update Sku Data
+name: Update Sku Data no API-Key
 description: ""
 method: PUT
 body:
@@ -29,7 +29,8 @@ authentication:
   key: X-API-Key
   value: "{{ xApiKey }}"
   addTo: header
-metaSortKey: -1686929000620.5
+  disabled: true
+metaSortKey: -1686929000611.125
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
