--- a/.insomnia/Request/req_5a9880aa073046e7a27cf2e416bc0636.yml
+++ b/.insomnia/Request/req_5a9880aa073046e7a27cf2e416bc0636.yml
@@ -1,12 +1,12 @@
-_id: req_wrk_8b77d1ab21754a59bfa499c468942a8cbf6c8be6
+_id: req_5a9880aa073046e7a27cf2e416bc0636
 type: Request
 parentId: fld_730582e06ae3430c8d7fa1fbf3456c11
-modified: 1686969578008
-created: 1686929000745
+modified: 1686969609599
+created: 1686969603544
 url: "{{ base_url }}/sku/{% response 'body',
   'req_wrk_8b77d1ab21754a59bfa499c468942a8cc001c871',
   'b64::JC5kYXRhWzBdLmlk::46b', 'no-history', 60 %}"
-name: Delete Sku Data
+name: Delete Sku Data no API-Key
 description: ""
 method: DELETE
 body: {}
@@ -17,7 +17,8 @@ authentication:
   key: X-API-Key
   value: "{{ xApiKey }}"
   addTo: header
-metaSortKey: -1686929000458
+  disabled: true
+metaSortKey: -1686929000420.5
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
