--- a/.insomnia/Request/req_7bb512fc0b6a42909706c4ee01524809.yml
+++ b/.insomnia/Request/req_7bb512fc0b6a42909706c4ee01524809.yml
@@ -1,12 +1,12 @@
-_id: req_wrk_8b77d1ab21754a59bfa499c468942a8cbf6c8be6
+_id: req_7bb512fc0b6a42909706c4ee01524809
 type: Request
 parentId: fld_730582e06ae3430c8d7fa1fbf3456c11
-modified: 1686969578008
-created: 1686929000745
+modified: 1686969614831
+created: 1686969591925
 url: "{{ base_url }}/sku/{% response 'body',
   'req_wrk_8b77d1ab21754a59bfa499c468942a8cc001c871',
   'b64::JC5kYXRhWzBdLmlk::46b', 'no-history', 60 %}"
-name: Delete Sku Data
+name: Delete Sku Data Wrong API-Key
 description: ""
 method: DELETE
 body: {}
@@ -15,9 +15,10 @@ headers: []
 authentication:
   type: apikey
   key: X-API-Key
-  value: "{{ xApiKey }}"
+  value: "1"
   addTo: header
-metaSortKey: -1686929000458
+  disabled: false
+metaSortKey: -1686929000433
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
