--- a/.insomnia/Request/req_faadd79589dc40f7be1c166c8112d37a.yml
+++ b/.insomnia/Request/req_faadd79589dc40f7be1c166c8112d37a.yml
@@ -1,12 +1,12 @@
-_id: req_wrk_8b77d1ab21754a59bfa499c468942a8cf22f151c
+_id: req_faadd79589dc40f7be1c166c8112d37a
 type: Request
 parentId: fld_22f3fcb750084d49874d4eb93550c54a
-modified: 1686969419107
-created: 1686929000747
+modified: 1686969481271
+created: 1686969461705
 url: "{{ base_url }}/sku/{% response 'body',
   'req_wrk_8b77d1ab21754a59bfa499c468942a8cc001c871',
   'b64::JC5kYXRhWzBdLmlk::46b', 'no-history', 60 %}"
-name: Update Sku Data
+name: Update Sku Data Wrong API-Key
 description: ""
 method: PUT
 body:
@@ -27,9 +27,9 @@ headers:
 authentication:
   type: apikey
   key: X-API-Key
-  value: "{{ xApiKey }}"
+  value: "1"
   addTo: header
-metaSortKey: -1686929000620.5
+metaSortKey: -1686929000614.25
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
