--- a/.insomnia/Request/req_wrk_8b77d1ab21754a59bfa499c468942a8c25cb1202.yml
+++ b/.insomnia/Request/req_wrk_8b77d1ab21754a59bfa499c468942a8c25cb1202.yml
@@ -1,10 +1,10 @@
 _id: req_wrk_8b77d1ab21754a59bfa499c468942a8c25cb1202
 type: Request
-parentId: wrk_8b77d1ab21754a59bfa499c468942a8c
-modified: 1686929000753
+parentId: fld_5a6c8a68085443e0a6a8a65e7f63882b
+modified: 1686949471154
 created: 1686929000753
 url: "{{ base_url }}/sku/bulk"
-name: Add Sku Data
+name: Add Sku Data Bulk
 description: ""
 method: POST
 body:
@@ -48,18 +48,60 @@ body:
         "update_date": "2023-05-29T00:03:54.298672",
         "type": "economic",
         "cloudStoreOnly": true
+      },
+    	 {
+        "baremetal": false,
+        "classtype": "T4g Series",
+        "company": "Amazon",
+        "cpu": 2,
+        "dedicated": false,
+        "description": "A maquina t4g.nano Linux tem 2 vCPUS e 1 GB de memoria. O valor comeca em $0.01 por hora ou $7.2 por mes",
+        "disk": {
+          "maxDisks": 0,
+          "value": 0,
+          "unit": ""
+        },
+        "external_network_speed": {
+          "value": 59605,
+          "unit": "MB"
+        },
+        "gpu": 0,
+        "internal_network_speed": {
+          "value": 0,
+          "unit": "B"
+        },
+        "link": "https://aws.amazon.com/ec2/instance-types/",
+        "location": "america.brazil.sao paulo.1",
+        "name": "t4g.nano Linux",
+        "price": {
+          "currency": "USD",
+          "date": "2023-05-29T00:03:54.298672",
+          "unit": "hour",
+          "value": 0.01
+        },
+        "ram": {
+          "value": 1,
+          "unit": "GB"
+        },
+        "update_date": "2023-05-29T00:03:54.298672",
+        "type": "economic",
+        "cloudStoreOnly": true
       }
     ]
 parameters: []
 headers:
   - name: Content-Type
     value: application/json
+  - id: pair_17d49abae90740f8ac6e9cb37e4477d3
+    name: ""
+    value: ""
+    description: ""
 authentication:
   type: apikey
   key: X-API-Key
   value: "{{ xApiKey }}"
   addTo: header
-metaSortKey: -1686929000753
+metaSortKey: -1686929000658
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
