--- a/.insomnia/Request/req_wrk_8b77d1ab21754a59bfa499c468942a8ce04481d4.yml
+++ b/.insomnia/Request/req_wrk_8b77d1ab21754a59bfa499c468942a8ce04481d4.yml
@@ -1,9 +1,11 @@
 _id: req_wrk_8b77d1ab21754a59bfa499c468942a8ce04481d4
 type: Request
-parentId: wrk_8b77d1ab21754a59bfa499c468942a8c
-modified: 1686929000749
+parentId: fld_5a6c8a68085443e0a6a8a65e7f63882b
+modified: 1686948708259
 created: 1686929000749
-url: "{{ base_url }}/sku/{{ id }}"
+url: "{{ base_url }}/sku/{% response 'body',
+  'req_wrk_8b77d1ab21754a59bfa499c468942a8cc001c871',
+  'b64::JC5kYXRhWzBdLmlk::46b', 'always', 60 %}"
 name: Get Sku Data
 description: ""
 method: GET
@@ -15,7 +17,7 @@ authentication:
   key: X-API-Key
   value: "{{ xApiKey }}"
   addTo: header
-metaSortKey: -1686929000749
+metaSortKey: -1686929000558
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
